@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.19 2012/03/22 23:12:41 asau Exp $
+# $NetBSD: Makefile,v 1.20 2012/08/12 23:36:44 jdf Exp $
 
-DISTNAME=	fossil-src-20120317175325
-PKGNAME=	fossil-1.22
+DISTNAME=	fossil-src-20120808112557
+PKGNAME=	fossil-1.23
 CATEGORIES=	devel scm
 MASTER_SITES=	http://www.fossil-scm.org/download/
 
